[package]
name = "cryptoki-bridge"
version = "0.2.0"
edition = "2021"
description = "A PKCS#11 implementation that delegates tasks to a MeeSign server instance."
authors = ["Kristian Mika <kristian.mika@protonmail.com>"]
license = "MIT"

[package.metadata.deb]
maintainer = "Kristian Mika <kristian.mika@protonmail.com>"
extended-description = """\
A PKCS#11 implementation that delegates tasks to a MeeSign server instance."""
depends = "$auto"
section = "utility"
priority = "optional"
revision = ""
assets = [
    [
        "target/release/libcryptoki_bridge.so",
        "usr/lib/libcryptoki_bridge.so",
        "755",
    ],
    [
        "deb/cryptoki-bridge.7",
        "usr/share/man/man7/cryptoki-bridge.7",
        "644",
    ],
]

[features]
default = []
mocked_ecdsa_communicator = ["dep:p256"]

[lib]
name = "cryptoki_bridge"
crate-type = ["cdylib"]

[build-dependencies]
bindgen = "0.70.1"
tonic-build = "0.12.3"

[dev-dependencies]
rstest = "0.23.0"

[dependencies]
aes = "0.8.4"
bincode = "1.3.3"
byteorder = "1.5.0"
cbc = "0.1.2"
cryptoki_macros = { path = "cryptoki_macros" }
dashmap = "6.1.0"
hex = "0.4.3"
home = "0.5.9"
lazy_static = "1.5.0"
libc = "0.2.159"
openssl = "0.10.66"
p256 = { version = "0.13.2", optional = true }
prost = "0.13"
rand = "0.8.5"
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tonic = { version = "0.12.3", features = ["tls", "transport"] }
uuid = { version = "1.10.0", features = ["v4"] }
derive-new = "0.7.0"
